@@ -19,6 +19,7 @@ __PACKAGE__->load_components(qw(
    Limit
    Columns
    AddColumns
+   Prefetch
 ));
 
 sub component_base_class { 'DBIx::Class::Helper::ResultSet::Shortcut' }
@@ -123,6 +124,13 @@ calling C<< $rs->count >>.
 
  # equivalent to...
  $foo_rs->search(undef, { '+columns' => [qw/ some column names /] });
+
+=method prefetch
+
+ $foo_rs->prefetch('bar');
+
+ # equivalent to...
+ $foo_rs->search(undef, { prefetch => 'bar' });
 
 =head1 SEE ALSO
 
